# pyDatalog

./: CLAUDE.md  LICENSE  pyproject.toml  setup.py
.flox/: env.json
.github/workflows/: build_wheels.yml
docs/: conf.py
pyDatalog/: Aggregate.py  UserList.py  __init__.py  pyDatalog.py  pyParser.py  util.py  version.py
pyDatalog/examples/: Mongo.py  SQLAlchemy.py  __init__.py  datalog.py  graph.py  hashtag.py  hashtag_optimized.py  multiModel.py  python.py  queens.py  queens_N.py  threadSafe.py  tutorial.py
pyDatalog/test/: placeholder.py
